fixed spacing

--- a/css/agency.css
+++ b/css/agency.css
@@ -28,7 +28,7 @@ h6 {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif; }
 
 section {
-  padding: 100px 0; }
+  padding: 0px; }
   section h2.section-heading {
     font-size: 40px;
     margin-top: 0;
@@ -55,7 +55,7 @@ section {
 
 @media (min-width: 768px) {
   section {
-    padding: 150px 0; } }
+    padding: 30px; } }
 
 .btn {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
